# geocmp

./: .editorconfig  .flake8  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: i18n-quick-guide.md  i18n-typer.md
examples/: README.md  custom.css  custom.js
geocmp/: __main__.py  glob_expander.py  html_maker.py
locales/: README.md
locales/ru_RU/LC_MESSAGES/: geocmp.po
scripts/: compile_translations.py  compile_translations.sh
src/geocmp/: __init__.py  __main__.py  cli.py  geojson_tools.py  glob_expander.py  html_maker.py  i18n.py
src/geocmp/templates/: map.js  style.css  template.html
