[project]
name = "geocmp"
version = "0.1.0"
description = "GeoJSON files comparer"
readme = "README.md"
authors = [
    { name = "Sergey Pankov", email = "svpmailbox@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
]

license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
geocmp = "geocmp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/geocmp"]
include = [
    "locales/**/*.mo",
    "locales/**/*.po",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=geocmp --cov-report=term-missing"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
